# IndieStudio

./: .gitignore  CMakeLists.txt  README.md
map_assets/materials/scripts/: BombRope.material  Examples.material  MySample.material  bom_face01_bom_face01.png.material  bomberman00_bomberman00.png.material
map_assets/models/: bomberman.mesh  cubebonusflame.mesh  cubebonusspeed.mesh  cubeexplosion.mesh  metalcube.mesh  woodcube.mesh
src/: CMakeLists.txt  main.cpp
src/BombManager/: BombManager.cpp  BombManager.hpp
src/ConfigData/: ConfigData.cpp  ConfigData.hpp
src/EntitiesManager/: EntitiesManager.cpp  EntitiesManager.hpp
src/EntitiesManager/AMovableEntity/: AMovableEntity.cpp  AMovableEntity.hpp
src/EntitiesManager/IMovableEntity/: IMovableEntity.hpp
src/GUIManager/: GUIManager.hpp
src/GameLoop/: GameLoop.cpp  GameLoop.hpp
src/IaManager/: IaManager.cpp  IaManager.hpp
src/InputLinker/: InputLinker.cpp  InputLinker.hpp  KeyMap.hpp
src/InputManager/: InputManager.cpp  InputManager.hpp
src/MapManager/: MapManager.cpp  MapManager.hpp
src/MenuManager/: MenuManager.cpp  MenuManager.hpp
src/PlayerManager/: PlayerManager.cpp  PlayerManager.hpp
src/SceneManager/: SceneManager.cpp  SceneManager.hpp
src/ScoreManager/: ScoreManager.cpp  ScoreManager.hpp
src/SoundManager/: SoundManager.cpp  SoundManager.hpp
src/includemap/: ATile.hpp  ITile.hpp  Map.hpp  MapGeneration.hpp  TileBase.hpp  TileBomb.hpp  TileBonusBasket.hpp  TileBonusBomb.hpp  TileBonusFlame.hpp  TileDestroy.hpp  TileExplosion.hpp  TileInde.hpp
src/includes/: Pos.hpp
src/srcmap/: CheckMap.cpp  Map.cpp  MapGeneration.cpp  MapOgre.cpp  TileBase.cpp  TileBomb.cpp  TileBonusBasket.cpp  TileBonusBomb.cpp  TileBonusFlame.cpp  TileDestroy.cpp  TileExplosion.cpp  TileInde.cpp
